Closed
Bug 148947
Opened 23 years ago
Closed 20 years ago
[quirks]selecting past underline extends underline
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
mozilla1.8beta4
People
(Reporter: philip, Assigned: masayuki)
References
Details
Attachments
(2 files)
|
120 bytes,
text/html
|
Details | |
|
1.61 KB,
patch
|
roc
:
review+
roc
:
superreview+
benjamin
:
approval1.8b4+
|
Details | Diff | Splinter Review |
using build 2002060308/Linux RH7.1
create a html page with something like this:
some text <u>underlined text</u> normal text
Now, click somewhere within the underlined text, and drag along the text to
increase your selection
as soon as the selection moves past the underlined text, the underline will
extend itself to cover more text.
Comment 1•23 years ago
|
||
WFM 1.0 branch 20020529 (Linux RH7.1).
Tried this URL:
http://www.cpt.dur.ac.uk/~levell/underline_testcase.html
Did you have an URL in mind?
| Reporter | ||
Comment 2•23 years ago
|
||
ok, you can try it at this url:
http://staff.ncst.ernet.in/~philip/cmc-cmcl.html
There are two underlines sections, it happens for both. seems it doesn't happen
for shorter items.
Comment 3•23 years ago
|
||
It's not to do with the length of the underlined section. It's because my
test case didn't have a style-sheet and the "problem" webpage does. To get the
problem consistently, the margin and text-align attributes both seem to need to
be set.
A minimal test case showing the problem is now at:
http://www.cpt.dur.ac.uk/~levell/underline_testcase2.html
If just the margin is set: http://www.cpt.dur.ac.uk/~levell/underline_testcase3.html
then I don't get the problem but I do get the strange "unselected" line at the
end of the underlined region.(a vertical unselected line of pixels, 1 pixel
wide through the blue selected region).
If just the justify is set:
http://www.cpt.dur.ac.uk/~levell/underline_testcase4.html
Then you don't get the strange "unselected" line and need to wave the mouse
around a bit to see the problem but it is there.
Bizarre!
| Reporter | ||
Comment 4•23 years ago
|
||
url 1 shows the bug alright. url 2 I couldn't see any problem. no vertical
line for me. url3, the underline extends, but only for a split second, and only
if you drag really fast. try dragging to the right and slightly upwards. it
makes it easier to see. on one occassion the underline stayed, but i can't
reproduce that.
Comment 5•23 years ago
|
||
Confirming issue in the 2002-06-05-05 OSX build.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P4
Updated•23 years ago
|
Target Milestone: --- → Future
Comment 6•23 years ago
|
||
Although bug #105265 involves selecting passed a link rather than underlined
text in general I suspect (but don't know) it is the same bug?
Comment 7•22 years ago
|
||
*** Bug 105265 has been marked as a duplicate of this bug. ***
Comment 8•22 years ago
|
||
This is now quirks-only since we do standards text-decoration painting in
standards mode.
Assignee: attinasi → font
Component: Layout → Layout: Fonts and Text
Priority: P4 → --
QA Contact: cpetersen0953 → ian
Summary: selecting past underline extends underline → [quirks]selecting past underline extends underline
Target Milestone: Future → ---
Updated•22 years ago
|
Priority: -- → P4
Target Milestone: --- → Future
Comment 9•21 years ago
|
||
I'm not sure what Boris means by quirks-only (I'm not a bugzilla expert) but
this bug still exists and doesn't seem like it would be hard to squash.
Reproducing the bug only seems to require a justified paragraph regardless of
what earlier comments suggest. I created a simple testcase at this URL:
http://www.nd.edu/~jquinn/underlinebug.htm
Comment 10•21 years ago
|
||
*** Bug 273771 has been marked as a duplicate of this bug. ***
Comment 11•21 years ago
|
||
Possibly easier way to reproduce what I hope is the same bug: at least on
Windows, where double-click selects, double-click the last word in the
underlined section, and the underline is extended what looks like the length of
the unselected underline (as though a new underline was drawn the correct
length, but with the starting position at the start of the selection, rather
than the start of the <u>'s content.
Comment 12•20 years ago
|
||
Just an update, still exists in Firefox 1.0.4
http://web.engr.oregonstate.edu/~philipsb/Screenshot.png
| Assignee | ||
Comment 13•20 years ago
|
||
Assignee: layout.fonts-and-text → masayuki
Status: NEW → ASSIGNED
Attachment #189323 -
Flags: superreview?(roc)
Attachment #189323 -
Flags: review?(roc)
| Assignee | ||
Updated•20 years ago
|
OS: Linux → All
Priority: P4 → P2
Hardware: PC → All
Target Milestone: Future → mozilla1.8beta4
Comment on attachment 189323 [details] [diff] [review]
Patch rv1.0
good catch
Attachment #189323 -
Flags: superreview?(roc)
Attachment #189323 -
Flags: superreview+
Attachment #189323 -
Flags: review?(roc)
Attachment #189323 -
Flags: review+
| Assignee | ||
Comment 15•20 years ago
|
||
Comment on attachment 189323 [details] [diff] [review]
Patch rv1.0
The risk is very low.
Attachment #189323 -
Flags: approval1.8b4?
Updated•20 years ago
|
Attachment #189323 -
Flags: approval1.8b4? → approval1.8b4+
| Assignee | ||
Comment 16•20 years ago
|
||
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 17•20 years ago
|
||
*** Bug 303758 has been marked as a duplicate of this bug. ***
Comment 18•20 years ago
|
||
*** Bug 309589 has been marked as a duplicate of this bug. ***
Comment 19•19 years ago
|
||
*** Bug 181770 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•