Bug 148947 [quirks]selecting past underline extends underline r+sr=roc, a=benjamin